# topi

./: Cargo.toml
topi/: Cargo.toml  build.rs
topi/benches/: shared_v_serialized.rs
topi/src/: config_parse.rs  lib.rs  test_utils.rs
topi/tests/: process.rs  topi.toml
topi_base/: Cargo.toml
topi_base/src/: lib.rs  messaging.rs  nodes.rs  process.rs  test_utils.rs  thread.rs
topi_base/src/data/: mod.rs
topi_base/src/data/c_api/: mod.rs  topi_data.h
topi_internal_macros/: Cargo.toml
topi_internal_macros/src/: lib.rs
topi_node_c/: Cargo.toml
topi_node_c/examples/: simple.c  simple.rs
topi_node_c/src/: lib.rs
topi_node_python/: Cargo.toml
topi_node_python/examples/: simple.rs
topi_node_python/src/: data.rs  lib.rs  node.rs  topi.py
topi_node_python/tests/: python.rs  tests.py
topi_proc/: Cargo.toml
topi_proc/src/: lib.rs
